# Hello-Real-World-with-ROS

./: README.md  week1.md  week2.md  week3.md  week4.md  week5.md  week6.md
hrwros_ws/: .gitignore
hrwros_ws/src/hrwros/hrwros_factory_behaviors/: README.md
hrwros_ws/src/hrwros/hrwros_factory_behaviors/flexbe_behaviors/manifest/: final_project.xml
hrwros_ws/src/hrwros/hrwros_factory_behaviors/flexbe_behaviors/src/flexbe_behaviors/: final_project_sm.py
hrwros_ws/src/hrwros/hrwros_msgs/: CMakeLists.txt  package.xml
hrwros_ws/src/hrwros/hrwros_msgs/msg/: ObjectDetection.msg  RobotTrajectories.msg
hrwros_ws/src/hrwros/hrwros_support/: CMakeLists.txt  package.xml
hrwros_ws/src/hrwros/hrwros_support/config/: hrwros.rviz  robot1_initial_positions.yaml  robot2_initial_positions.yaml
hrwros_ws/src/hrwros/hrwros_support/launch/: visualize_hrwros.launch  visualize_hrwros.launch.py
hrwros_ws/src/hrwros/hrwros_support/urdf/: hrwros.xacro  ur.urdf.xacro
hrwros_ws/src/hrwros/hrwros_utilities/: package.xml  setup.cfg  setup.py
hrwros_ws/src/hrwros/hrwros_week1/: package.xml  setup.cfg  setup.py
hrwros_ws/src/hrwros/hrwros_week1/hrwros_week1/: counter_with_delay_ac.py  counter_with_delay_as.py  metres_to_feet_client.py  metres_to_feet_server.py  sensor_info_publisher.py  sensor_info_subscriber.py  template_publisher_script.py  template_subscriber_script.py  week1_assignment1.py  week1_assignment2.py
hrwros_ws/src/hrwros/hrwros_week1/launch/: hrwros_week1_assignments1_2.launch.py  hrwros_week1_servers.launch  hrwros_welcome.launch  hrwros_welcome.launch.py
hrwros_ws/src/hrwros/hrwros_week1/scripts/: counter_with_delay_as.py  sensor_info_publisher.py  template_subscriber_script.py
hrwros_ws/src/hrwros_assignments/hrwros_week0_assignment/: package.xml  setup.cfg  setup.py
hrwros_ws/src/hrwros_assignments/hrwros_week0_assignment/hrwros_week0_assignment/: week0_assignment.py
hrwros_ws/src/hrwros_assignments/hrwros_week0_assignment/scripts/: week0_assignment.py
hrwros_ws/src/hrwros_assignments/hrwros_week0_assignment_interfaces/: CMakeLists.txt  package.xml
hrwros_ws/src/hrwros_assignments/hrwros_week1_assignment/: package.xml  setup.cfg  setup.py
hrwros_ws/src/hrwros_assignments/hrwros_week1_assignment/hrwros_week1_assignment/: week1_assignment1_part1.py  week1_assignment1_part3.py  week1_assignment2.py  week1_assignment3.py
hrwros_ws/src/hrwros_assignments/hrwros_week1_assignment/launch/: hrwros_week1_assignment3.launch  hrwros_week1_assignment3.launch.py  hrwros_week1_assignments1_2.launch  hrwros_week1_assignments1_2.launch.py
hrwros_ws/src/hrwros_assignments/hrwros_week1_assignment/scripts/: week1_assignment1_part1.py  week1_assignment1_part3.py  week1_assignment2.py
hrwros_ws/src/hrwros_assignments/hrwros_week1_assignment_interfaces/: CMakeLists.txt  package.xml
hrwros_ws/src/hrwros_assignments/hrwros_week2_assignment/: CMakeLists.txt  package.xml
hrwros_ws/src/hrwros_assignments/hrwros_week2_assignment/config/: assignment1.rviz  assignment2.rviz  assignment3.rviz  params.yaml  view_robot.rviz
hrwros_ws/src/hrwros_assignments/hrwros_week2_assignment/launch/: visualize_hrwros_assignment1.launch.py  visualize_hrwros_assignment2.launch  visualize_hrwros_assignment2.launch.py  visualize_hrwros_assignment3.launch  visualize_hrwros_assignment3.launch.py
hrwros_ws/src/hrwros_assignments/hrwros_week2_assignment/launch/replacement_robot/: view_week2_replacement_robot.launch
hrwros_ws/src/hrwros_assignments/hrwros_week2_assignment/urdf/: hrwros_assignment1.xacro  hrwros_assignment2.xacro  hrwros_assignment3.xacro
hrwros_ws/src/hrwros_assignments/hrwros_week2_assignment/urdf/robot/: lrmate200ic_macro.xacro
hrwros_ws/src/hrwros_assignments/hrwros_week4_assignment/scripts/: week4_assignment3.py
hrwros_ws/src/hrwros_assignments/hrwros_week5_assignment/launch/: week5_assignment2_part1.launch  week5_assignment2_part2.launch
hrwros_ws/src/hrwros_assignments/hrwros_week5_assignment/models/new_logical_camera1/: model.sdf
hrwros_ws/src/hrwros_assignments/hrwros_week5_assignment/models/new_logical_camera2/: model.sdf
hrwros_ws/src/hrwros_assignments/hrwros_week5_assignment/scripts/: week5_assignment3.py
hrwros_ws/src/hrwros_assignments/week4_moveit_config/config/: hrwros.srdf
