<?xml version="1.0"?>
<package format="2">
  <name>hrwros_week0_assignment</name>
  <version>0.0.0</version>
  <description>The hrwros_week0_assignment package</description>

  <maintainer email="noreply@hrwros.mooc">HRWROS mooc maintainers</maintainer>

  <license>BSD</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>hrwros_week0_assignment_interfaces</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_python</build_type>
  </export>
</package>
