<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>hrwros_week1_assignment</name>
  <version>0.0.0</version>
  <description>The hrwros_week1_assignment package</description>

  <maintainer email="noreply@hrwros.mooc">HRWROS mooc maintainers</maintainer>

  <license>BSD</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>hrwros_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_python</build_type>
  </export>
</package>
